WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69928
[WebKit2][gtk] Fix warnings while generating WebKit2-GTK+ documentation.
https://bugs.webkit.org/show_bug.cgi?id=69928
Summary
[WebKit2][gtk] Fix warnings while generating WebKit2-GTK+ documentation.
Nayan Kumar K
Reported
2011-10-12 07:41:58 PDT
Fix the following warnings, ./tmpl/WebKitWebContext.sgml:29: warning: Value descriptions for WebKitCacheModel are missing in source code comment block. ../../../../../../../../Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:274: warning: Parameter described in source code comment block but does not exist. FUNCTION: webkit_web_view_reload_bypass_cache Parameter: webView. ../../../../../../../../Source/WebKit2/UIProcess/API/gtk/WebKitWebView.cpp:274: warning: Parameter description for webkit_web_view_reload_bypass_cache::web_view is missing in source code comment block. ./tmpl/WebKitError.sgml:55: warning: Value descriptions for WebKitPluginError are missing in source code comment block. ./tmpl/WebKitError.sgml:67: warning: Value descriptions for WebKitPolicyError are missing in source code comment block. gtk-doc: Building HTML
Attachments
Warning fix
(4.22 KB, patch)
2011-10-13 02:52 PDT
,
Nayan Kumar K
no flags
Details
Formatted Diff
Diff
Warning fix
(1.99 KB, patch)
2011-10-13 04:33 PDT
,
Nayan Kumar K
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nayan Kumar K
Comment 1
2011-10-13 02:52:08 PDT
Created
attachment 110817
[details]
Warning fix
Carlos Garcia Campos
Comment 2
2011-10-13 04:05:46 PDT
Comment on
attachment 110817
[details]
Warning fix View in context:
https://bugs.webkit.org/attachment.cgi?id=110817&action=review
Thanks for the patch!
> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:63 > +/** > + * WebKitPolicyError: > + * @WEBKIT_POLICY_ERROR_FAILED: Generic load failure due to policy error > + * @WEBKIT_POLICY_ERROR_CANNOT_SHOW_MIME_TYPE: Load failure due to unsupported mime type > + * @WEBKIT_POLICY_ERROR_CANNOT_SHOW_URL: Load failure due to url that can not be shown > + * @WEBKIT_POLICY_ERROR_FRAME_LOAD_INTERRUPTED_BY_POLICY_CHANGE: Load failure due to frame load interruption by policy change > + * @WEBKIT_POLICY_ERROR_CANNOT_USE_RESTRICTED_PORT: Load failure due to port restriction > + * > + * Enum values used to denote the various policy errors.
This is not actually fixing a warning (even though it fixes a warning), but documenting WebKitPolicyError enum, so I think this should be another bug.
> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:64 > + *
Do you really need this empty line here?
> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:83 > +/** > + * WebKitPluginError: > + * @WEBKIT_PLUGIN_ERROR_FAILED: Generic plugin load failure > + * @WEBKIT_PLUGIN_ERROR_CANNOT_FIND_PLUGIN: Load failure due to missing plugin > + * @WEBKIT_PLUGIN_ERROR_CANNOT_LOAD_PLUGIN: Load failure due to inability to load plugin > + * @WEBKIT_PLUGIN_ERROR_JAVA_UNAVAILABLE: Load failue due to missing Java support that is required to load plugin > + * @WEBKIT_PLUGIN_ERROR_CONNECTION_CANCELLED: Load failure due to connection cancellation > + * @WEBKIT_PLUGIN_ERROR_WILL_HANDLE_LOAD: Load failure since plugin handles the load > + * > + * Enum values used to denote the various plugin errors.
Ditto, I think it would be better to file a new bug report to document missing enums in WebError and include a patch with both PolicyError and PluginError enums documented.
> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:84 > + *
I don't think we need this empty line.
> Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.h:53 > - */ > + * > + **/
Are you sure this produces a warning? I don't think we need either the empty line nor the double ** at the end.
Nayan Kumar K
Comment 3
2011-10-13 04:33:54 PDT
Created
attachment 110824
[details]
Warning fix
Nayan Kumar K
Comment 4
2011-10-13 04:37:25 PDT
Comment on
attachment 110817
[details]
Warning fix View in context:
https://bugs.webkit.org/attachment.cgi?id=110817&action=review
>> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:83 >> + * Enum values used to denote the various plugin errors. > > Ditto, I think it would be better to file a new bug report to document missing enums in WebError and include a patch with both PolicyError and PluginError enums documented.
I have raised a new bug for adding this documentation -
https://bugs.webkit.org/show_bug.cgi?id=70016
>> Source/WebKit2/UIProcess/API/gtk/WebKitError.h:84 >> + * > > I don't think we need this empty line.
Yes, we actually do not need an empty line here.
>> Source/WebKit2/UIProcess/API/gtk/WebKitWebContext.h:53 >> + **/ > > Are you sure this produces a warning? I don't think we need either the empty line nor the double ** at the end.
You are right. Double ** is needed only in starting the comment block. Removed this and also the empty line.
WebKit Review Bot
Comment 5
2011-10-13 06:57:55 PDT
Comment on
attachment 110824
[details]
Warning fix Clearing flags on attachment: 110824 Committed
r97364
: <
http://trac.webkit.org/changeset/97364
>
WebKit Review Bot
Comment 6
2011-10-13 06:57:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug