[WebKit2][gtk] Fix warnings while generating WebKit2-GTK+ documentation. https://bugs.webkit.org/show_bug.cgi?id=69928

Patch by Nayan Kumar K <nayankk@motorola.com> on 2011-10-13
Reviewed by Philippe Normand.

Patch fixes the warnings reported by gtk-doc while generating
WebKit2-GTK+ documentation.

* UIProcess/API/gtk/WebKitWebContext.h: Correct the documentation comment.
* UIProcess/API/gtk/WebKitWebView.cpp: Parameter name correction.

Canonical link: https://commits.webkit.org/86094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97364 268f45cc-cd09-0410-ab3c-d52691b4dbfc